idf_component_register(SRCS "main.c"
                            "./com/com_debug.c"
                            "./dri/dri_hlw8032.c"
                            "./dri/dri_relay_control.c"
                            "./dri/dri_key_ctrl.c"
                            "./dri/dri_SSD1306.c"
                            "./int/int_ectric_energy.c"
                            "./int/int_protection.c"
                            "./int/int_OLED.c"
                            "./int/int_wifi.c"
                            "./int/int_mqtt.c"
                            "./int/int_bluetooth.c"
                            "./app/app_cloud.c"
                            "./app/app_system.c"
                            "./app/app_key.c"
                    INCLUDE_DIRS
                     "."
                     "./com"
                     "./int"
                     "./app"
                     "./dri"
                     )
